# advent-code-2025-rust

./: Cargo.toml
src/: main.rs  utils.rs
src/api/: docs.rs  mod.rs
src/assignments/: ass_01.rs  ass_02.rs  ass_03.rs  ass_04.rs  ass_05.rs  mod.rs
src/handlers/: handler_day_1.rs  handler_day_2.rs  handler_day_3.rs  handler_day_4.rs  handler_day_5.rs  mod.rs  returns.rs
