[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version ="1.48.0" , features = ["full"]}
utoipa = {version ="5.4.0", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
